--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.13.0",
     "react-router-dom": "^6.24.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
